[tool.poetry]
name = "chatbot-python"
version = "0.0.1"
description = "CDP AgentKit Example Chatbot"
authors = ["John Peterson <john.peterson@coinbase.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cdp-langchain = "^0.0.11"
twitter-langchain = { path = "../../../twitter-langchain/python", develop = true }
eth-utils = ">=5.0.0"
cdp-agentkit-core = { path = "../../../cdp-agentkit-core/python", develop = true }
requests = "^2.31.0"
web3 = "^7.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
